GNOME Bugzilla – Bug 763289
Validate: Fix consider, launch spelling mistakes
Last modified: 2016-03-11 15:56:40 UTC
Fix a few spelling mistakes concider --> consider lunch --> launch
Created attachment 323355 [details] [review] fix trivial spelling mistakes
commit 65560d8b0342fd26582f9f4d506a9b6968718e48 Author: Vineeth T M <vineeth.tm@samsung.com> Date: Tue Mar 8 15:54:32 2016 +0900 Validate: Fix consider, launch spelling mistakes https://bugzilla.gnome.org/show_bug.cgi?id=763289