Validate: Fix consider, launch spelling mistakes

https://bugzilla.gnome.org/show_bug.cgi?id=763289