validate/tools/gst-validate-images-check.c
@@ -68,7 +68,7 @@ main (int argc, char **argv)
   g_option_context_set_summary (ctx,
       "The gst-validate-images-check calculates SSIM (Structural SIMilarity) "
       " index for the images. And according to min-lowest-similarity and"
-      " min-avg-similarity, it will concider the images similare enough"
+      " min-avg-similarity, it will consider the images similar enough"
       " or report critical issues in the GstValidate reporting system");
   g_option_context_add_main_entries (ctx, options, NULL);
 
